--- a/PracticaMapa/Base.lproj/Main.storyboard
+++ b/PracticaMapa/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nNZ-c0-6yX">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -13,13 +13,145 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="102" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ewJ-VE-ZbP">
+                                <rect key="frame" x="0.0" y="29" width="320" height="455"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="102" id="wlt-M4-BKP" customClass="CellTable">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="102"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wlt-M4-BKP" id="CBG-kO-nGT">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k2h-il-saf">
+                                                    <rect key="frame" x="208" y="7" width="107" height="81"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="107" id="hgu-Zm-ztc"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVz-A1-7PZ">
+                                                    <rect key="frame" x="11" y="40" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="42" id="cTb-DD-kf7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="139" translatesAutoresizingMaskIntoConstraints="NO" id="uhm-Lh-7ij">
+                                                    <rect key="frame" x="61" y="26" width="139" height="55"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="uhm-Lh-7ij" firstAttribute="leading" secondItem="fVz-A1-7PZ" secondAttribute="trailing" constant="8" symbolic="YES" id="1Eb-nu-Dvc"/>
+                                                <constraint firstItem="k2h-il-saf" firstAttribute="leading" secondItem="uhm-Lh-7ij" secondAttribute="trailing" constant="8" symbolic="YES" id="4zg-3e-xRD"/>
+                                                <constraint firstItem="uhm-Lh-7ij" firstAttribute="top" secondItem="CBG-kO-nGT" secondAttribute="top" constant="26" id="9pB-Qf-RPo"/>
+                                                <constraint firstItem="fVz-A1-7PZ" firstAttribute="leading" secondItem="CBG-kO-nGT" secondAttribute="leading" constant="11" id="MDM-a3-czL"/>
+                                                <constraint firstAttribute="bottom" secondItem="k2h-il-saf" secondAttribute="bottom" constant="13" id="OF2-yB-6RF"/>
+                                                <constraint firstItem="fVz-A1-7PZ" firstAttribute="centerY" secondItem="CBG-kO-nGT" secondAttribute="centerY" id="OG0-Lu-w6h"/>
+                                                <constraint firstAttribute="bottom" secondItem="uhm-Lh-7ij" secondAttribute="bottom" constant="20" symbolic="YES" id="RJA-Hi-jcd"/>
+                                                <constraint firstItem="k2h-il-saf" firstAttribute="top" secondItem="CBG-kO-nGT" secondAttribute="top" constant="7" id="j8l-ML-h1F"/>
+                                                <constraint firstAttribute="trailing" secondItem="k2h-il-saf" secondAttribute="trailing" constant="5" id="rUj-oa-L8P"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="image" destination="k2h-il-saf" id="P4q-7W-wS8"/>
+                                            <outlet property="nombre" destination="uhm-Lh-7ij" id="9V8-cO-dU7"/>
+                                            <outlet property="numero" destination="fVz-A1-7PZ" id="BLq-M1-tEo"/>
+                                            <segue destination="kla-BW-QxW" kind="push" identifier="detail" trigger="accessoryAction" id="9LS-va-mIz"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="Cdy-kD-uvY"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="z0w-X8-GFL"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ewJ-VE-ZbP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="PNy-aU-jSp"/>
+                            <constraint firstAttribute="trailing" secondItem="ewJ-VE-ZbP" secondAttribute="trailing" id="SKm-RM-nCq"/>
+                            <constraint firstItem="ewJ-VE-ZbP" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="29" id="cCV-MU-ET1"/>
+                            <constraint firstAttribute="bottom" secondItem="ewJ-VE-ZbP" secondAttribute="bottom" constant="20" symbolic="YES" id="eeC-wq-opw"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="j8N-82-E70"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="98f-dq-tlO">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="nNZ-c0-6yX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y5P-MW-We4">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="8BW-bK-Bfa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vhq-kI-2YC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-404" y="-67"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="D0L-iJ-iSG">
+            <objects>
+                <viewController id="kla-BW-QxW" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CgV-ha-ZdE"/>
+                        <viewControllerLayoutGuide type="bottom" id="d4j-Ed-q89"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pau-eS-On5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="42O-8K-LX2">
+                                <rect key="frame" x="0.0" y="61" width="320" height="507"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="pCo-gp-fTX"/>
+                    <connections>
+                        <outlet property="mapView" destination="42O-8K-LX2" id="Vxe-EV-7pm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BNV-fE-Axb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="465" y="-67"/>
+        </scene>
+        <!--Detail Map View Controller-->
+        <scene sceneID="mMn-ge-WZ9">
+            <objects>
+                <viewController id="yad-Zg-E4C" customClass="DetailMapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iWT-5q-Akm"/>
+                        <viewControllerLayoutGuide type="bottom" id="2aS-yU-hOx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EhC-bM-saW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="US1-9i-jwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="874" y="-67"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
